# openai-apis-fastapi

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: __main__.py  app_paths.py  dependencies.py
app/core/: helpers.py  settings.py
app/models/: models.py
app/routes/: application.py  router.py
app/routes/grammer/: __init__.py  grammer_view.py
app/routes/image_generation/generation/: __init__.py  generation_view.py
app/routes/movie_to_emoji/: __init__.py  movie_to_emoji_view.py
app/routes/natural_language_to_code/: __init__.py  natural_laguage_to_code_view.py
app/routes/python_to_natural_language/: __init__.py  python_to_natural_language_view.py
app/routes/q_and_a/: __init__.py  q_and_a_view.py
app/routes/sql_translate/: __init__.py  sql_translate_view.py
app/routes/summarize/: __init__.py  summarize_view.py
app/routes/text_completion/grammar/: __init__.py  grammar_view.py
app/routes/text_completion/grammer/: __init__.py  grammer_view.py
app/routes/text_completion/movie_to_emoji/: __init__.py  movie_to_emoji_view.py
app/routes/text_completion/natural_language_to_code/: __init__.py  natural_laguage_to_code_view.py
app/routes/text_completion/python_to_natural_language/: __init__.py  python_to_natural_language_view.py
app/routes/text_completion/q_and_a/: __init__.py  q_and_a_view.py
app/routes/text_completion/sql_translate/: __init__.py
app/routes/text_to_command/: __init__.py  text_to_command_view.py
app/routes/translate/: __init__.py  translate_view.py
envs/: dev.example.env
(+4 files in other folders)
