[tool.poetry]
name = "openai-apis-fastapi"
version = "0.1.0"
description = "OpenAI APIs in FastAPI application"
authors = ["Rashmin Dungrani <rashmin8248@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
openai = "^0.26.5"
uvicorn = "^0.20.0"
pydantic = {extras = ["dotenv"], version = "^1.10.5"}
ujson = "^5.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
